[package]
name = "free_tunnel_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
borsh = "1.5.7"
solana-program = "2.3.0"
spl-token = "8.0.0"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
spl-token = "8.0.0"
tokio = "1.43.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.rustc]
check-cfg = ["values(feature, \"custom-heap\", \"custom-panic\")", "values(target_os, \"solana\")"]
