[package]
name = "free_tunnel_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
borsh = "1.5.7"
solana-program = "2.2.0"    # compatible with spl-token 8.0.0
solana-sdk-ids = "2.2.0"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }     # compatible with solana-program 2.2.0
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.0"
tokio = "1.43.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-panic = []
custom-heap = []
