[package]
name = "free_tunnel_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
borsh = "1.5.7"
solana-program = "2.3.0"
solana-sdk-ids = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-panic = []
custom-heap = []
